# instacalendar

./: AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  windows-build.yml
docs/: google-oauth-maintainer-setup.md  release-pypi.md
docs/specs/: ANSWER-LiteLLM-vs-httpx.md  ANSWER-publish-PyPI-from-GitHub-CI.md  BUG-litellm-providers-and-progress.md  BUG-windows-executable-does-nothing.md  NOTES-track-fast-changing-API-client.md  PLAN-initial-features.md  PLAN-post-content-caching.md  PRD-cache-verb-extracted-events.md  PRD-distributed-shared-event-cache.md  PRD-initial-features.md  PRD-resumable-extraction-pipeline.md
src/instacalendar/: __init__.py  cache.py  cli.py  config.py  google_auth.py  instagram.py  models.py  runner.py  secrets.py
src/instacalendar/exporters/: __init__.py  google.py  ics.py
src/instacalendar/extractors/: __init__.py  openrouter.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_google_auth.py  test_google_exporter.py  test_ics_exporter.py  test_instagram.py  test_models.py  test_openrouter.py  test_runner.py  test_secrets.py
