[project]
name = "instacalendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucas Koelman", email = "lucas.koelman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
instacalendar = "instacalendar:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
