[project]
name = "instacalendar"
version = "0.1.0"
description = "Sync Instagram saved event posts to calendar exports."
readme = "README.md"
authors = [
    { name = "Lucas Koelman", email = "lucas.koelman@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["calendar", "instagram", "ics", "openrouter", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "google-api-python-client>=2.179.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
    "icalendar>=6.1.3",
    "instagrapi>=2.2.1",
    "keyring>=25.6.0",
    "litellm>=1.83.0",
    "pillow>=11.2.1",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "questionary>=2.1.0",
    "rich>=14.1.0",
    "typer>=0.16.0",
    "tzlocal>=5.3.1",
]

[project.scripts]
instacalendar = "instacalendar.cli:app"

[project.urls]
Homepage = "https://github.com/lkoelman/instacalendar"
Repository = "https://github.com/lkoelman/instacalendar"
Issues = "https://github.com/lkoelman/instacalendar/issues"

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "respx>=0.22.0",
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
